<resources>
    <string name="app_name">Test Application</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_first">First</string>
    <string name="action_second">Second</string>


    <!-- Strings used for fragments for main navigation -->
    <string name="first_fragment_label">Avatar List</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="help_fragment_label">Help Fragment</string>


    <!-- Strings used for fragments for auth navigation -->
    <string name="login_fragment_label">Login</string>
    <string name="signup_fragment_label">Signup</string>

    <string name="next">Next</string>
    <string name="get_list">Get List</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_settings_fragment">Hello settings fragment. Arg: %1$s</string>
    <string name="hello_help_fragment">Hello help fragment. </string>


    <!-- character card items -->
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="avatar">Avatar</string>
    <string name="species">Species</string>
    <string name="no_species">No Species</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>