<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.myapplication.ui.fragments.auth.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            />

    </fragment>

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.myapplication.ui.fragments.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:popUpToInclusive="false"
            />

        <action
            android:id="@+id/action_FirstFragment_to_SettingsFragment"
            app:destination="@id/SettingFragment"
            app:enterAnim="@xml/anim_test"/>

        <action
            android:id="@+id/action_FirstFragment_to_HelpFragment"
            app:destination="@id/HelpFragment"
            app:enterAnim="@xml/anim_test"/>
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.myapplication.ui.fragments.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@xml/anim_test"/>
    </fragment>

    <fragment
        android:id="@+id/SettingFragment"
        android:name="com.example.myapplication.ui.fragments.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SettingFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@xml/anim_test"/>
    </fragment>

    <fragment
        android:id="@+id/HelpFragment"
        android:name="com.example.myapplication.ui.fragments.HelpFragment"
        android:label="@string/help_fragment_label"
        tools:layout="@layout/fragment_help">

        <action
            android:id="@+id/action_HelpFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@xml/anim_test"/>

    </fragment>

</navigation>