<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/character_card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_image_shape"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="120dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/card_image_shape"
                app:shapeAppearanceOverlay="@style/avatar_image_style" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/gender"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_species"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_add_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/add_basket_btn_shape"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/background_middle4_color"
                android:layout_gravity="center"
                android:textAppearance="?attr/textAppearanceBody2"
                android:text="Add Basket" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>